@@ -104,6 +104,7 @@ stamp-h1
 /include/libsmraw/types.h
 /libsmraw/libsmraw.rc
 /libsmraw/libsmraw_definitions.h
+/pysmraw/setup.py
 /smrawtools/smrawmount
 /smrawtools/smrawverify
 /tests/input
